--- a/ips.html
+++ b/ips.html
@@ -78,7 +78,7 @@
         <div class="col-md-3">
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> 2017</li>
-                <li><i class="ion-ios-circle-filled"></i> Sketch, Photoshop, Illustrator</li>
+                <li><i class="ion-ios-circle-filled"></i> Sketch, Photoshop, Illustrator, Zeplin</li>
             </ul>
             <div class="h-10"></div>
         </div>
