--- a/swc.html
+++ b/swc.html
@@ -69,6 +69,8 @@
         </div>
 
         <div class="col-md-9">
+        <p>SWC is a surveillance video system</p>
+            <br>
             <h4>Before Redesign</h4>
             <p>Screenshots of the registration process:</p>
             <img src="img/swc_before.jpg" alt="" class="img-responsive"/>
@@ -76,7 +78,7 @@
              <div class="col-md-3">
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> 2017</li>
-                <li><i class="ion-ios-circle-filled"></i> Sketch</li>
+                <li><i class="ion-ios-circle-filled"></i> Sketch, Zeplin, Marvel</li>
             </ul>
             <div class="h-10"></div> 
         </div>
