--- a/tms.html
+++ b/tms.html
@@ -62,15 +62,13 @@
             <img src="img/tms_1920.jpg" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
-
         <div class="col-md-12">TMS Website</h3>
             <h5>UI / UX Design</h5>
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-9">
-            <img src="img/tms_1920_2.jpg" alt="" class="img-responsive" />
-            <br>
+            
             <h4>Request</h4>
             <ul>
               <li>Design new visual style</li>
@@ -78,11 +76,11 @@
             </ul>
         </div>
         <div class="col-md-9">
-        <h4>My responisibility</h4>
+        <h4>My Role</h4>
             <ul>
-              <li>Confirm request, problem statement and project goal with PO</li>
-              <li>Figure out the solution which take balance with project schedule, coding effort and PO's expectation</li>
-              <li>Coperate with developers, from confirm feasibilirt to polish deploymented design</li>
+              <li>Confirm request, problem statement and project goal with product owner</li>
+              <li>Figure out the solution which takes balance with project schedule, coding effort</li>
+              <li>Coperate with developers, from confirming feasibility to polishing implemented design</li>
               <li>Design flows which match user's intuition, iterate design style, redesign icons and define design guideline</li>
             </ul>
         </div>
@@ -95,7 +93,7 @@
             
         </div>
         <div class="col-md-9">
-            <h4>Before Design</h4>
+            <h4>Before Iteration</h4>
             <img src="img/tms_before.jpg" alt="" class="img-responsive"/>
             <br>
             <h4>Iterated Design</h4>
