--- a/circo_web.html
+++ b/circo_web.html
@@ -77,7 +77,7 @@
         <div class="col-md-3">
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> 2016</li>
-                <li><i class="ion-ios-circle-filled"></i> Sketch, Photoshop</li>
+                <li><i class="ion-ios-circle-filled"></i> Sketch, Photoshop, Zeplin, Marvel</li>
             </ul>
             <div class="h-10"></div>
             
