--- a/ignitenet.html
+++ b/ignitenet.html
@@ -70,9 +70,8 @@
 
         <div class="col-md-9">
             <p>IgniteNet’s Cloud Controller is for remote management, monitoring and trouble-shooting of multiple networks at a time.</p>
-            <img src="img/ig_2.jpg" alt="" class="img-responsive" />
             <br>
-            <h4>My Responsibility</h4>
+            <h4>My Role</h4>
             <ul>
               <li>Collaborate with product owner to confirm requests, define problem statements.</li>
               <li>Run usability test to make sure the working flows are institute.</li>
@@ -91,12 +90,48 @@
             
         </div>
         <div class="col-md-9">
-            <h4>Features</h4>
+            <h4>New feature: Allow user to add notes</h4>
             <ul>
-              <li>Add a new input field for user to take notes</li>
-              <li>Iterate the invitation process</li>
-            </ul>
-            
+                <li>Request</li>
+                <p>These would allow users to add notes to their devices and sites about which customer is connected, and other useful stuff. This was requested by a customer.
+                </p>
+                <li>Highlight</li>
+                <p>1. Interview users to learn the user scenario
+                <br>2. Design a simple way for user to add note quickly and for developers, it doesn't take much effort to deployment.
+                </p>
+                <li>Process</li>
+                <p>1. Define Goal
+                <br>A new feature which helps user quick note everything important.
+                </p>
+                <p>2. Design Metric
+                <br>- Easy to use 
+                <br>- Easy to be searched
+                <br>- Easy to deployment
+                </p>
+                <p>
+                3. Explore
+                <br>- Define Scenario
+                <br>This is a new feature which there are many possible scenarios and maybe some scenarios we didn't know. It's hard to design for all scenarios. Discuss with team members and decided to design for the scenarios we know.
+                <br>
+                <br>- Idea A: User can enter everything at the same place. The reason why note is on left menu is because it might be used to note installation info, it'd be better that while user do config task, he/she can still see these note without going to other page
+                <img src="img/ig_11018_quickconcepta.JPG"/>
+                <br>
+                <br>
+                <br>- Idea B: There is a small button/text link at Site/Device info bottom, click it will show pop up. This note can be shown on device list table, beneath device name. Or expand the row to see its note.
+                <br>
+                <br>
+                <img src="img/ig_11018_quickconceptb.JPG"/>
+                <br>- Decision
+                <br>Because it's a new feature, and the scenario is uncertain. The goal is to deliver MVP, not to cost much time and effort, as it implemented, gather user's feedback to iterate it. Therefore based on the idea B to design.
+                </p>
+                <li>Design</li>
+                <p>- Flow chart
+                <img src="img/ig_11018_flowchart.jpg" alt="" class="img-responsive"/>
+                <img src="img/ig_11018.jpg" alt="" class="img-responsive"/>
+                </p>
+                <br>
+                <li>If you are interested in the other features I designed please feel free to contact me :) </li>
+            </ul>       
         </div>
     </div>
     <!-- end main-container -->
