--- a/irent.html
+++ b/irent.html
@@ -90,7 +90,7 @@
             
         </div>
         <div class="col-md-9">
-            <h4>Before Revision</h4>
+            <h4>Before Iteration</h4>
             <img src="img/irent_a.jpg" alt="" class="img-responsive"/>
             <h4>Redesign Points</h4>
             <ul>
@@ -99,7 +99,7 @@
               <li>The booking information was arranged in time order where the newest one was put at the bottom of the list. Users have to scroll down the lengthy page to check their latest booking.</li>
             </ul>
             <br>
-            <h4>After Revision</h4>
+            <h4>Iterated Design</h4>
             <img src="img/irent_b.jpg" alt="" class="img-responsive"/>
             <ul>
               <li>Related iRent service information like “Location,” “Introduction,” and “Rating” are rearranged and combined under “About iRent” section. </li>
