--- a/ignitenet.html
+++ b/ignitenet.html
@@ -104,9 +104,9 @@
                 <br>A new feature which helps user quick note everything important.
                 </p>
                 <p>2. Design Metric
-                <br>- Easy to use 
+                <br>- Easy to be used 
                 <br>- Easy to be searched
-                <br>- Easy to deployment
+                <br>- Easy to be deployed
                 </p>
                 <p>
                 3. Explore
