--- a/tms.html
+++ b/tms.html
@@ -80,7 +80,7 @@
             <ul>
               <li>Confirm request, problem statement and project goal with product owner</li>
               <li>Figure out the solution which takes balance with project schedule, coding effort</li>
-              <li>Coperate with developers, from confirming feasibility to polishing implemented design</li>
+              <li>Collaborate with developers, from confirming feasibility to polishing implemented design</li>
               <li>Design flows which match user's intuition, iterate design style, redesign icons and define design guideline</li>
             </ul>
         </div>
