--- a/ignitenet.html
+++ b/ignitenet.html
@@ -59,7 +59,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/ig_1920_2.jpg" alt="" class="img-responsive" />
+            <img src="img/ig_2.jpg" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
 
