--- a/ignitenet.html
+++ b/ignitenet.html
@@ -101,9 +101,12 @@
                 <li>Design a simple way for user to add note quickly and for developers, it doesn't take much effort to deployment.</li>
                 </ul>
                 <li>Process</li>
-                <p>1. Define Goal
+                <p>1. Empathize with the users and define the problem and goal
                 <br>Talk to users to learn their scenarios. Discuss with PO to confirm the scenarios and the feature goal "Allow user to note everything important quickly".
                 </p>
+                <br>
+                <img src="img/ig_persona.jpg" alt="" class="img-responsive" />
+                <br>
                 <p>2. Design Metric
                 <br>- Consistency and standards
                 <br>- Recognition rather than recall
@@ -115,8 +118,8 @@
                 <br>Define Scenario
                 <br>This is a new feature which there are many possible scenarios and maybe some scenarios we didn't know. It's hard to design for all scenarios. Discuss with team members and decided to design for the scenarios we know.
                 <ul>
-                <li>Scenario 1: User Morris added a device which is named 2F-15 in Taipei 101, he wrote down the device location since he doesn’t have the Taipei 101 building map, and there are 15 devices installed in 2F.  One day Morris found out that device 2F-15 was offline, so he decided to go to Taipei 101 to check the device. He used the note to know where the device was and found it quickly.</li>
-                <li>Scenario 2: Morris installed a ignitenet device in Taipei 101 2F, because of some security reasons, he didn't registered it in cloud. He checked the vlan ID (he already had a vlan, he wanted to involve this device in). After installing it, He added a note about the device vlan ID and IP address in Taipei 101 site. Taipei 101 manager said internet in some places are not stable, Morris know the internet in that area is connecting by the not registered device. Then he went to Taipei 101, checked the note and know its vlan Id and IP address, then he local logged in to see what happen.</li>
+                <li>Scenario 1: User Jonathen added a device which is named 2F-15 in Taipei 101, he wrote down the device location since he doesn’t have the Taipei 101 building map, and there are 15 devices installed in 2F.  One day Jonathen found out that device 2F-15 was offline, so he decided to go to Taipei 101 to check the device. He used the note to know where the device was and found it quickly.</li>
+                <li>Scenario 2: Jonathen installed a ignitenet device in Taipei 101 2F, because of some security reasons, he didn't registered it in cloud. He checked the vlan ID (he already had a vlan, he wanted to involve this device in). After installing it, He added a note about the device vlan ID and IP address in Taipei 101 site. Taipei 101 manager said internet in some places are not stable, Jonathen know the internet in that area is connecting by the not registered device. Then he went to Taipei 101, checked the note and know its vlan Id and IP address, then he local logged in to see what happen.</li>
                 </ul>
                 <br>
                 <ul>
