--- a/ignitenet.html
+++ b/ignitenet.html
@@ -83,7 +83,7 @@
 
         <div class="col-md-3">
             <ul class="cat-ul">
-                <li><i class="ion-ios-circle-filled"></i> 2017~2019</li>
+                <li><i class="ion-ios-circle-filled"></i> 2019</li>
                 <li><i class="ion-ios-circle-filled"></i> Sketch, Marvel, Zeplin </li>
             </ul>
             <div class="h-10"></div>
@@ -156,7 +156,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© YuHsin Wang 2017</p>
+            <p class="copyright">© YuHsin Wang 2020</p>
         </div>
     </footer>
     <!-- end footer -->
