--- a/ignitenet.html
+++ b/ignitenet.html
@@ -73,10 +73,10 @@
             <br>
             <h4>My Role</h4>
             <ul>
-              <li>Collaborate with product owner to confirm requests, define problem statements.</li>
-              <li>Run usability test to make sure the working flows are institute.</li>
-              <li>Design the UI which are clean and beautiful.</li>
-              <li>Interview users to learn their pain points, discuss with team members to itergrate the potential opportunities into product roadmap, help create features that address users’ needs.</li>
+              <li>Collaborate with the product owner to confirm requests, define problem statements.</li>
+              <li>Run usability tests to make sure the working flows are institute.</li>
+              <li>Design the UI which is clean and beautiful.</li>
+              <li>Interview users to learn their pain points, discuss with team members to integrate the potential opportunities into the product roadmap, help create features that address users’ needs.</li>
               <li>Lead design team to defining design language, create design guideline which helps team members work efficiently.</li>
             </ul>
         </div>
@@ -98,11 +98,11 @@
                 <li>Highlight</li>
                 <ul>
                 <li>Interview users to learn the user scenario</li>
-                <li>Design a simple way for user to add note quickly and for developers, it doesn't take much effort to deployment.</li>
+                <li>Design a simple way for users to add note quickly and for developers, it doesn't take much effort to deployment.</li>
                 </ul>
                 <li>Process</li>
                 <p>1. Empathize with the users and define the problem and goal
-                <br>Talk to users to learn their scenarios. Discuss with PO to confirm the scenarios and the feature goal "Allow user to note everything important quickly".
+                <br>Talk to users to learn their scenarios. Discuss with PO to confirm the scenarios and the feature goal "Allow users to note everything important quickly".
                 </p>
                 <br>
                 <img src="img/ig_persona.jpg" alt="" class="img-responsive" />
@@ -116,19 +116,19 @@
                 <p>
                 3. Explore
                 <br>Define Scenario
-                <br>This is a new feature which there are many possible scenarios and maybe some scenarios we didn't know. It's hard to design for all scenarios. Discuss with team members and decided to design for the scenarios we know.
+                <br>This is a new feature in which there are many possible scenarios and maybe some scenarios we didn't know. It's hard to design for all scenarios. Discuss with team members and decided to design for the scenarios we know.
                 <ul>
                 <li>Scenario 1: User Jonathen added a device which is named 2F-15 in Taipei 101, he wrote down the device location since he doesn’t have the Taipei 101 building map, and there are 15 devices installed in 2F.  One day Jonathen found out that device 2F-15 was offline, so he decided to go to Taipei 101 to check the device. He used the note to know where the device was and found it quickly.</li>
-                <li>Scenario 2: Jonathen installed a ignitenet device in Taipei 101 2F, because of some security reasons, he didn't registered it in cloud. He checked the vlan ID (he already had a vlan, he wanted to involve this device in). After installing it, He added a note about the device vlan ID and IP address in Taipei 101 site. Taipei 101 manager said internet in some places are not stable, Jonathen know the internet in that area is connecting by the not registered device. Then he went to Taipei 101, checked the note and know its vlan Id and IP address, then he local logged in to see what happen.</li>
+                <li>Scenario 2: Jonathen installed an ignitenet device in Taipei 101 2F, because of some security reasons, he didn't register it in cloud. He checked the VLAN ID (he already had a vlan, he wanted to involve this device in). After installing it, He added a note about the device VLAN ID and IP address in Taipei 101 site. Taipei 101 manager said the internet in some places are not stable, Jonathen know the internet in that area is connecting by the not registered device. Then he went to Taipei 101, checked the note and know its VLAN Id and IP address, then he local logged in to see what happen.</li>
                 </ul>
                 <br>
                 <ul>
-                <li>Idea A: User can enter everything at the same place. The reason why note is on left menu is because it might be used to note installation info, it'd be better that while user do config task, he/she can still see these note without going to other page
+                <li>Idea A: User can enter everything at the same place. The reason why the note is on the left menu is that it might be used to note installation info, it'd be better that while user do config task, he/she can still see these note without going to other pages.
                 <br>
                 <img src="img/ig_11018_quickconcepta.JPG"/></li>
                 <br>
                 <br>
-                <li>Idea B: There is a small button/text link at Site/Device info bottom, click it will show pop up. This note can be shown on device list table, beneath device name. Or expand the row to see its note.
+                <li>Idea B: There is a small button/text link at Site/Device info bottom, click it will show pop up. This note can be shown on the device list table, beneath the device name. Or expand the row to see its note.
                 <br>
                 <br>
                 <img src="img/ig_11018_quickconceptb.JPG"/></li>
@@ -139,7 +139,7 @@
                 <li>Design</li>
                 <ul>
                 <li>Use the existing components and patterns</li>
-                <li>Run usability test to make the design decisiion</li>
+                <li>Run usability tests to make the design decision</li>
                 <li>Polish design</li>
                 </ul>
                 <img src="img/ig_11018_flowchart.jpg" alt="" class="img-responsive"/>
