--- a/irent.html
+++ b/irent.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="col-md-9">
-            <p>iRent is an app which is used to book a rental car anywhere and anytime. </p>
+            <p>iRent is an app that is used to book a rental car anywhere and anytime. </p>
             <img src="img/irent_0.jpg" alt="" class="img-responsive" />
             <br>
             <h4>New Functions Added</h4>
@@ -95,8 +95,8 @@
             <h4>Redesign Points</h4>
             <ul>
               <li>There are up to eleven unarranged buttons making users inaccessible to the feature they need.</li>
-              <li>“Ongoing bookings” and “Completed bookings” sections were not clearly differentiated, making a lengthy page.</li>
-              <li>The booking information was arranged in time order where the newest one was put at the bottom of the list. Users have to scroll down the lengthy page to check their latest booking.</li>
+              <li>“Ongoing bookings” and “Completed bookings” sections were not differentiated, making a lengthy page.</li>
+              <li>The booking information was arranged in a time order where the newest one was put at the bottom of the list. Users have to scroll down the lengthy page to check their latest booking.</li>
             </ul>
             <br>
             <h4>Iterated Design</h4>
@@ -113,7 +113,7 @@
             </ul>
             <img src="img/irent_d.jpg" alt="" class="img-responsive"/>
             <ul>
-              <li>Separate the ongoing and the completed bookings.</li>
+              <li>Separate the ongoing and completed bookings.</li>
               <li>Buttons displayed on the page vary when the present status changes and accordingly creates different tasks for the users. </li>
               <li>Functions of pickup, time extension, and return will be triggered only when orders have been placed or when rental cars are in use.</li>
             </ul>
