--- a/tms.html
+++ b/tms.html
@@ -71,16 +71,16 @@
             
             <h4>Request</h4>
             <ul>
-              <li>Design new visual style</li>
+              <li>Design a new visual style</li>
               <li>Design new pages: Product, Contact, User setting, FAQ</li>
             </ul>
         </div>
         <div class="col-md-9">
         <h4>My Role</h4>
             <ul>
-              <li>Confirm request, problem statement and project goal with product owner</li>
-              <li>Figure out the solution which takes balance with project schedule, coding effort</li>
-              <li>Collaborate with developers, from confirming feasibility to polishing implemented design</li>
+              <li>Confirm request, problem statement and project goal with the product owner</li>
+              <li>Figure out the solution which takes balance with the project schedule, coding effort</li>
+              <li>Collaborate with developers, from confirming feasibility to polishing the implemented design</li>
               <li>Design flows which match user's intuition, iterate design style, redesign icons and define design guideline</li>
             </ul>
         </div>
