--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p>I am a passionate UXUI Designer based in Taipei.</P>
                 <p>I take on projects of all sizes; from digital product design to mobile app product and web design.
                 </p>
-                <p>I have more than 2 years of experience that tackle long-term design projects and remote collaboration
+                <p>I have the experience that tackles long-term design projects and remote collaboration
                     between multi-background teams. I can not only deliver design requests but also enrich the design
                     depth and culture of the team. Please check out my work and resume and feel free to contact me!</p>
                 <div class="contact-info">
