--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                             class="ion-social-linkedin"></i></a></li>
                 <li class="box-social"><a href="https://www.behance.net/yuhsin33" target="_blank"><i
                             class="fab fa-behance-square"></i></a></li>
+                <li class="box-social"><a href="https://www.dropbox.com/home/Resume" target="_blank"><i
+                            class="ion-social-dropbox"></i></a></li>
                 <li class="box-social"><a href="https://www.pinterest.com/horo3355/" target="_blank"><i
                             class="ion-social-pinterest"></i></a></li>
                 <li class="box-social"><a href="https://www.instagram.com/ppplanty/" target="_blank"><i
