--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© YuHsin Wang 2020!</p>
+            <p class="copyright">© YuHsin Wang 2020</p>
         </div>
     </footer>
     <!-- end footer -->
