--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-KRCHZSS');</script>
 <!-- End Google Tag Manager -->
 
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -108,6 +109,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             class="ion-social-linkedin"></i></a></li>
                 <li class="box-social"><a href="https://www.behance.net/yuhsin33" target="_blank"><i
                             class="fab fa-behance-square"></i></a></li>
+                <li class="box-social"><a href="https://medium.com/@horo3355" target="_blank"><i
+                            class="fab fa-medium"></i></a></li>
                 <li class="box-social"><a href="https://www.dropbox.com/sh/wrmgfehu8galiow/AACIjeMaAa56hYAKFnkp4C9wa?dl=0" target="_blank"><i
                             class="ion-social-dropbox"></i></a></li>
                 <li class="box-social"><a href="https://www.pinterest.com/horo3355/" target="_blank"><i
@@ -147,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- single work 2 -->
                 <div class="col-md-3 col-sm-6 app">
                     <a href="swc.html" class="portfolio_item">
-                        <img src="img/swc_02.jpg" alt="image" class="img-responsive" />
+                        <img src="img/swc_1000.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -177,7 +180,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- end single work 3 -->
 
                 <!-- single work 4 -->
-                <div class="col-md-3 col-sm-6 app">
+                 <div class="col-md-3 col-sm-6 app">
                     <a href="irent.html" class="portfolio_item">
                         <img src="img/irent.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
@@ -194,12 +197,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- single work 5 -->
                 <div class="col-md-3 col-sm-6 app">
-                    <a href="maskmap.html" class="portfolio_item">
-                        <img src="img/maskmap_1000.jpg" alt="image" class="img-responsive" />
+                    <a href="tms.html" class="portfolio_item">
+                        <img src="img/tms_1000_2.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mask Map</span>
+                                    <span>TMS</span>
                                     <em>Website</em>
                                 </div>
                             </div>
@@ -210,13 +213,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- single work 6 -->
                 <div class="col-md-6 col-sm-12 App">
-                    <a href="circo_app.html" class="portfolio_item">
+                    <a href="circo_merge.html" class="portfolio_item">
                         <img src="img/circo.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Circo</span>
-                                    <em>App</em>
+                                    <em>App / Website / Package / DM</em>
                                 </div>
                             </div>
                         </div>
@@ -226,13 +229,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- single work 7 -->
                 <div class="col-md-3 col-sm-6 ads webui">
-                    <a href="circo_web.html" class="portfolio_item">
-                        <img src="img/circo_web.jpg" alt="image" class="img-responsive" />
+                    <a href="artsbank.html" class="portfolio_item">
+                        <img src="img/artsbank.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Circo</span>
-                                    <em>Website</em>
+                                    <span>Artsbank</span>
+                                    <em>App</em>
                                 </div>
                             </div>
                         </div>
@@ -241,14 +244,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- end single work 7 -->
 
                 <!-- single work 8 -->
-                <div class="col-md-3 col-sm-6 web dm">
-                    <a href="ips.html" class="portfolio_item">
-                        <img src="img/ips.jpg" alt="image" class="img-responsive" />
+                 <div class="col-md-3 col-sm-6 app">
+                    <a href="maskmap.html" class="portfolio_item">
+                        <img src="img/maskmap_1000_2.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Athentek</span>
-                                    <em>Website / DM</em>
+                                    <span>Mask Map</span>
+                                    <em>Website</em>
                                 </div>
                             </div>
                         </div>
@@ -258,14 +261,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- end single work 8 -->
 
                 <!-- single work 9 -->
-                <div class="col-md-3 col-sm-6 app">
-                    <a href="tms.html" class="portfolio_item">
-                        <img src="img/tms_1000_2.jpg" alt="image" class="img-responsive" />
+                <div class="col-md-3 col-sm-6 web dm">
+                    <a href="ips.html" class="portfolio_item">
+                        <img src="img/ips.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>TMS</span>
-                                    <em>Website</em>
+                                    <span>Athentek</span>
+                                    <em>Website / DM</em>
                                 </div>
                             </div>
                         </div>
