Sweeth add image 0222
Update sweeth tooth.html
Add image
Remove duplicated images

--- a/sweettooth.html
+++ b/sweettooth.html
@@ -87,12 +87,13 @@ Conceiving the whole picture of an app makes 100 Daily UI not just a challenge o
         </div>
         <br>
         <div class="col-md-12">
-            <img src="img/sweettooth_a.jpg" alt="" class="img-responsive" />
+            <img src="img/sweettooth_a.png" alt="" class="img-responsive" />
             <br>
             <br>
             <img src="img/sweettooth_b.jpg" alt="" class="img-responsive" />
             <br>
             <img src="img/sweettooth_c.jpg" alt="" class="img-responsive" />
+            <img src="img/sweettooth_d.png" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
     </div>
