--- a/irent_archive.html
+++ b/irent_archive.html
@@ -69,10 +69,9 @@
         </div>
 
         <div class="col-md-9">
-            <p>iRent is an app that is used to book a rental car anywhere and anytime. My task was to iterate the app.</p>
+            <p>iRent is an app that is used to book a rental car anywhere and anytime. </p>
             <img src="img/irent_0.jpg" alt="" class="img-responsive" />
             <br>
-            <!-- 
             <h4>New Functions Added</h4>
             <ul>
               <li>Select the car rental location in map view or list view</li>
@@ -80,7 +79,6 @@
               <li>Remotely locking/unlocking features are added</li>
               <li>Different pick-up and drop-off spots for some specific locations (the same concept as Ubike)</li>
             </ul>
-             -->
         </div>
 
         <div class="col-md-3">
@@ -92,43 +90,16 @@
             
         </div>
         <div class="col-md-9">
-            <h4>Problem statement</h4>
-              <p>Firstly, I played the app for a while and listed some not user-friendly points:</p>
-              <ul>
+            <h4>Before Iteration</h4>
+            <img src="img/irent_a.jpg" alt="" class="img-responsive"/>
+            <h4>Redesign Points</h4>
+            <ul>
               <li>There are up to eleven unarranged buttons making users inaccessible to the feature they need.</li>
               <li>“Ongoing bookings” and “Completed bookings” sections were not differentiated, making a lengthy page.</li>
               <li>The booking information was arranged in a time order where the newest one was put at the bottom of the list. Users have to scroll down the lengthy page to check their latest booking.</li>
             </ul>
-            <img src="img/irent_a.jpg" alt="" class="img-responsive"/>
-
-            <p>I also gathered feedback from the Internet</p>
-            <ul>
-            	<li>It wastes time to extend the car renting time</li>
-            	<li>Wish to reorder the booking list from latest to old</li>
-            	<li>Wish to add "Day" on renting car page</li>
-            	<li>It's hard to find a cat to rent</li>
-            	<li>The app is not stable</li>
-            	<li>Allow editing the credit card</li>
-            </ul>
-
-            <p>Integrated the problems, discussed the PM, my goal for this project were:</p>
-            <ul>
-            	<li>Reorganize the IA to reduce users' confusion</li>
-            	<li>Optimize the working flows to help users take action efficiently</li>
-            	<li>Redesign the visual style and define the style guide to keep the consistency</li>
-            </ul>
-
- 
             <br>
-            <h4>Design</h4>
-            <p>Because the IA was messy I used card sorting to reorganize the IA and came up with the functional map</p>
-            <img src="img/irent_functionalmap.png" height="600" alt=""/>
-            <br>
-            <br>
-            <p>The wireframe for renting a car(The final version), click <a href="https://drive.google.com/file/d/1XuuyNz4JEBBNmD7vuXNUs4Zs5pAI-0Ua/view?usp=sharing" target="_blank">here</a> to see larger image</p>
-            <img src="img/irent_wireframe.png" height="500" alt=""/>
-            <h4>The hi-fi mock up</h4>
-            <p>Display the highlight</p>
+            <h4>Iterated Design</h4>
             <img src="img/irent_b.jpg" alt="" class="img-responsive"/>
             <ul>
               <li>Related iRent service information like “Location,” “Introduction,” and “Rating” are rearranged and combined under “About iRent” section. </li>
