--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h3 class="uppercase">About Me </h3>
                 <h5>Hi, I'm YuHsin</h5>
                 <div class="h-30"></div>
-                <p>I am a passionate UXUI Designer based in Taipei.</P>
+                <p>I am a passionate product designer based in Taipei.</P>
                 <p>I take on projects of all sizes; from digital product design to mobile app product and web design.
                 </p>
                 <p>I have the experience that tackles long-term design projects and remote collaboration
@@ -166,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- single work 3 -->
                 <div class="col-md-6 col-sm-12 app">
                     <a href="ignitenet.html" class="portfolio_item">
-                        <img src="img/ignitenet.jpg" alt="image" class="img-responsive" />
+                        <img src="img/ignitenet2020.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- single work 4 -->
                  <div class="col-md-3 col-sm-6 app">
                     <a href="irent.html" class="portfolio_item">
-                        <img src="img/irent.jpg" alt="image" class="img-responsive" />
+                        <img src="img/irent2020.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
