--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h5>Hi, I'm YuHsin</h5>
                 <div class="h-30"></div>
                 <p>I am a passionate product designer based in Taipei.</P>
-                <p>I take on projects of all sizes; from digital product design to mobile app product and web design.
+                <p>I take on projects of all sizes digital products; from mobile app to web.
                 </p>
                 <p>I have the experience that tackles long-term design projects and remote collaboration
                     between multi-background teams. I can not only deliver design requests but also enrich the design
